--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,3 +50,20 @@ jobs:
             with:
                 push: true
                 tags: parfecto/2ac2aef8edfc
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
+        script: |
+          # Выполняет pull образа с DockerHub
+          sudo docker pull parfecto/2ac2aef8edfc
+          #остановка всех контейнеров
+          sudo docker stop $(sudo docker ps -a -q)
+          sudo docker run --rm -d -p 5000:5000 parfecto/2ac2aef8edfc
