--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
             uses: docker/build-push-action@v2
             with:
                 push: true
-                tags: parfecto/2ac2aef8edfc
+                tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -63,7 +63,7 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
         script: |
           # Выполняет pull образа с DockerHub
-          sudo docker pull parfecto/2ac2aef8edfc
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
           #остановка всех контейнеров
           sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 parfecto/2ac2aef8edfc
+          sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
