--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -4,13 +4,19 @@ on: [push]
 
 jobs:
   tests:
+    # «Раннер» — создание изолированного окружения с последней версией Ubuntu 
     runs-on: ubuntu-latest
 
     steps:
+    # Запуск actions checkout — готового скрипта 
+    # для клонирования репозитория
     - uses: actions/checkout@v2
-    - name: Set up Python 
+    - name: Set up Python
+      # Запуск actions setup-python — готового скрипта 
+      # для развёртывания окружения Python
       uses: actions/setup-python@v2
       with:
+        # Выбор версии Python
         python-version: 3.7
 
     - name: Install dependencies
@@ -21,13 +27,43 @@ jobs:
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         # установка зависимостей
         pip install -r requirements.txt 
-
     - name: Test with flake8 and django tests
       run: |
         # запуск проверки проекта по flake8
         python -m flake8
-        # перейти в папку, содержащую manage.py — 
-        #<корневая_папка>/<api_yamdb/>/manage.py
-        cd api_yamdb/
-        # запустить написанные разработчиком тесты
-        python manage.py test
+  build_and_push_to_docker_hub:
+        name: Push Docker image to Docker Hub
+        runs-on: ubuntu-latest
+        needs: tests
+        steps:
+          - name: Check out the repo
+            uses: actions/checkout@v2
+          - name: Set up Docker Buildx
+            uses: docker/setup-buildx-action@v1
+          - name: Login to Docker
+            uses: docker/login-action@v1
+            with:
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_PASSWORD }}
+          - name: Push to Docker Hub
+            uses: docker/build-push-action@v2
+            with:
+                push: true
+                tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
+        script: |
+          # Выполняет pull образа с DockerHub
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
+          #остановка всех контейнеров
+          sudo docker stop $(sudo docker ps -a -q)
+          sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
