--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.7-slim
-WORKDIR /app
+WORKDIR /app/api_yamdb
 COPY requirements.txt .
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . /app
