--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -46,10 +46,11 @@ jobs:
               username: ${{ secrets.DOCKER_USERNAME }}
               password: ${{ secrets.DOCKER_PASSWORD }}
           - name: Push to Docker Hub
-            uses: docker/build-push-action@v2
+            uses: docker/build-push-action@v3
             with:
-                push: true
-                tags: parfecto/2ac2aef8edfc
+              context: api_yamdb
+              push: true
+              tags: parfecto/2ac2aef8edfc
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
