--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -50,7 +50,7 @@ jobs:
             with:
               context: api_yamdb
               push: true
-              tags: parfecto/2ac2aef8edfc
+              tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -65,4 +65,4 @@ jobs:
         script: |
           sudo docker pull parfecto/2ac2aef8edfc
           sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 parfecto/2ac2aef8edfc
+          sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
