--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     env_file:
       - ./.env
   web:
-    build: ../api_yamdb
+    image: parfecto/2ac2aef8edfc:latest
     restart: always
     volumes:
       - static_value:/app/static/
@@ -19,7 +19,7 @@ services:
     depends_on:
       - db
     env_file:
-      - /.env
+      - ./.env
 
   nginx:
     image: nginx:1.21.3-alpine
@@ -29,7 +29,9 @@ services:
 
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+
       - static_value:/var/html/static/
+      
       - media_value:/var/html/media/
 
     depends_on:
