--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
       - "80:80"
 
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/
+      - ./nginx/default.conf:/etc/nginx/conf.d
       - ../api_yamdb/static/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - static_value:/var/html/static/
       - media_value:/var/html/media/
