--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,6 +1,6 @@
 
 # версия docker-compose
-version: '3.3'
+version: '3.8'
 
 # имена и описания контейнеров, которые должны быть развёрнуты
 services:
@@ -28,7 +28,7 @@ services:
       - "80:80"
 
     volumes:
-      - /nginx/default.conf:/etc/nginx/conf.d
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ../api_yamdb/static/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - static_value:/var/html/static/
       - media_value:/var/html/media/
