--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3.7-alpine
 
+RUN mkdir /app
+
 WORKDIR /app
 
-COPY requirements.txt .
+COPY requirements.txt /app
 
 RUN  pip3 install -r /app/requirements.txt --no-cache-dir
 
