--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,12 +1,9 @@
 FROM python:3.7-slim
 
-# Создать директорию вашего приложения.
-RUN mkdir /app
-
 WORKDIR /app
 # Скопировать с локального компьютера файл зависимостей
 # в директорию /app.
-COPY requirements.txt /app
+COPY requirements.txt .
 
 # Выполнить установку зависимостей внутри контейнера.
 RUN pip3 install -r /app/requirements.txt --no-cache-dir
