--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,9 +1,11 @@
 FROM python:3.7-slim
 
-WORKDIR /app
+# Создать директорию вашего приложения.
+RUN mkdir /app
+
 # Скопировать с локального компьютера файл зависимостей
 # в директорию /app.
-COPY requirements.txt .
+COPY requirements.txt /app
 
 # Выполнить установку зависимостей внутри контейнера.
 RUN pip3 install -r /app/requirements.txt --no-cache-dir
