--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -51,7 +51,7 @@ jobs:
             with:
               context: api_yamdb
               push: true
-              tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
+              tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -65,7 +65,7 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
         script: |
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
           sudo docker-compose stop
           sudo docker-compose rm web
           touch .env
