--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_tokens off;
 
-    server_name 51.250.1.5;
+    server_name localhost;
 
     location /static/ {
         root /var/html/;
