--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -3,6 +3,9 @@ server {
     server_tokens off;
 
     server_name localhost;
+    
+    large_client_header_buffers 4 16k;
+
 
     location /static/ {
         root /var/html/;
